mad-deployment-service/k8s/infra/traefik/testPage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-webpage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-webpage
  template:
    metadata:
      labels:
        app: sample-webpage
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: webpage-config
---
apiVersion: v1
kind: Service
metadata:
  name: sample-webpage
spec:
  selector:
    app: sample-webpage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
